[package]
name = "phone-monitor-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-rt = "2.7.0"
openssl = { version = "0.10" }
actix-web-actors = "4.1.0"
actix = "0.13.0"
