[package]
name = "phone-monitor-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
cli-clipboard = "0.3.0"
device_query = "1.1.1"
lazy_static = "1.4.0"
rand = "0.8.5"
thread-priority = "0.9.2"
tokio = "1.26.0"
