[package]
name = "rust-server-android-libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.19.0", default-features = false }
# async-ffi = "0.4.1"
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
rand = "0.8.5"
thread-priority = "0.9.2"
android_logger = "0.13.0"
log = "0.4.17"
lazy_static = "1.4.0"
tokio = "1.25.0"
env_logger = "0.10.0"

[lib]
crate_type = ["cdylib"]
